2008-06-08  Scott James Remnant  <scott@netsplit.com>

	* dbus/com.ubuntu.Upstart.Job.xml (Start, Stop, Restart): Add methods
	to control jobs, all take an environment array and both Start and
	Restart return an instance path so properties, etc. can be obtained
	afterwards.
	* init/job_class.c (job_class_start, job_class_stop)
	(job_class_restart): Add the code for the top halves of the methods
	* init/job_class.h: Add prototypes for the new methods.
	* init/job.c (job_finished): And the bottom halves go here.
	* init/tests/test_job_class.c (test_start, test_stop)
	(test_restart): Add test cases for the methods.
	* init/blocked.h (blocked_type): Add enums for the new methods.
	* init/blocked.c (blocked_new): Handle the new methods here.
	* init/tests/test_blocked.c (test_new): Add add tests for handling.

2008-06-07  Scott James Remnant  <scott@netsplit.com>

	* init/job_process.c (job_process_terminated): Don't check the goal
	to see whether the main process was allowed to terminate, check the
	state.  A termination is only not a failure if we're on the KILLED
	state (ie. we killed it), otherwise it can still be a failure even
	if it was going to stop anyway.
	* init/tests/test_job_process.c (test_handler): Add a test case.

	* init/control.c (control_emit_event): Use environ_all_valid here(),
	also reorder the blocking stuff to be less strange, it's ok to free
	environment.
	* init/tests/test_control.c (test_emit_event): The event array should
	be a child of message, which means it doesn't matter if the function
	we call frees it.

	* init/environ.c (environ_all_valid): Add a validation function for
	external input.
	* init/environ.h: Add prototype.
	* init/tests/test_environ.c (test_all_valid): Test function.

	* init/environ.c: Note that we can call this in a loop with OOM,
	since the resulting table will always be the same.

	* init/event_operator.c (event_operator_environment): Use
	environ_append(), and while we're at it, there's no reason this should