@@ -1,5 +1,9 @@
 2008-06-08  Scott James Remnant  <scott@netsplit.com>
 
+	* init/job.c (job_start, job_stop, job_restart): Clear the start
+	and stop environment, shouldn't necessarily make a difference, but
+	it pays to be consistent.
+
 	* dbus/com.ubuntu.Upstart.Job.xml (Start, Stop, Restart): Add methods
 	to control jobs, all take an environment array and both Start and
 	Restart return an instance path so properties, etc. can be obtained
